2003-09-16  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03960] 
	* acinclude.m4 (AC_W3M_CHECK_VER): fix version check logic

2003-08-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03958] w3mimgdisplay on jfbterm
	* w3mimg/fb/fb_w3mimg.c (w3mimg_fbopen): check TERM=jfbterm

2003-08-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03957] Location: from local-CGI
	* file.c (loadGeneralFile): don't parse header for local file
		redirected by Location: from local-CGI

2003-08-12  TSUCHIYA Masatoshi <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* [w3m-dev 03950] rel attribute of anchor tag
	* html.c (ALST_A): add ATTR_REL
		(MAXA_A): +1

2003-07-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03945] Re: application/xhtml+xml support
	* Makefile.in (ETC_DIR): added
		(CONF_DIR): added
		(DEFS): add CONF_DIR
		(MAKE_ARGS): add CONF_DIR
	* config.h.in (SYS_MAILCAP): use CONF_DIR
		(SYS_URIMETHODMAP): use CONF_DIR
	* func.c (sys_current_keymap_file): added
		(interpret_keymap): added
		(initKeymap): use interpret_keymap
		(interpret_mouse_action): added
		(initMouseAction): use interpret_mouse_action
	* indep.c (w3m_conf_dir): added
	* indep.h (w3m_conf_dir): added
	* menu.c (interpret_menu): added
		(initMenu): use interpret_menu
	* proto.h (confFile): added
	* rc.c (init_rc): read config file by interpret_rc
		(confFile): added

2003-07-23  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>

	* [w3m-dev 03942] Save history
	* history.c (saveHistory): check tmpfile write error

2003-07-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03941] fix character encoding for 'v'
	* main.c (vwSrc): use document_code as DisplayCode

2003-07-23  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03939] next/prev visited link
	* funcname.tab (NEXT_VISITED): added
		(PREV_VISITED): added
	* main.c (_nextA): added
		(_prevA): added
		(nextVA): added
		(prevVA): added
	* proto.h (nextVA): added
		(prevVA): added
	* doc/README.func (NEXT_VISITED): added